# TelegramControlBot

./: .dockerignore  .env.example  .gitignore  ControlBot.bat  ControlBot.py  LICENSE  NOTICE  README.md  file_monitor.py  help_texts.py  install_autostart.bat  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.bat  start.bat  uninstall_autostart.bat
app/: __init__.py  __main__.py  app.py  config.py  gui_utils.py  help_texts.py  paths_config.py  router.py  security.py  state.py
app/config/: __init__.py  paths.py
app/core/: __init__.py  centralized_handler.py  logging.py  metrics_decorator.py  security.py
app/handlers/: __init__.py  attachments.py  auth.py  cancel.py  cmd.py  command_search.py  docs_photos.py  files.py  find_cmd.py  help.py  logs_export.py  menu.py  monitor.py  mouse_keyboard.py  paths.py  paths_handlers.py  processes.py  rdp.py  registration.py  remote_desktop.py  screen.py  security.py  security_handlers.py  stats.py  system.py
app/middleware/: __init__.py  logging_middleware.py
app/services/: __init__.py  centralized_logging.py  lifecycle.py  metrics.py  monitor.py  process_stream.py
docs/: FUTURE.md  README_ru.md  SECURITY.md  all_commands.md
docs/README/: README_ru.md
docs/RU/: CHANGELOG.md  CHANGELOG.v1.md  CHANGELOG.v2.md  COMMANDS.md  CONFIG.md  DEVELOPMENT.md  FUTURE.md  HEADLESS.md  INSTALLATION.md  LOGGING.md  MIGRATION_v2.2.md  RISKS_FIXED_v2.2.1.md  SECURITY.md  all_commands.md  logging_levels.md
jsons/: DEFAULT_PATHS.json
scripts/windows/: ControlBot.bat  README.md
tests/: README.md  __init__.py  test_config.py  test_smoke.py
